kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-api
  namespace: ecom
spec:
  type: ClusterIP
  selector:
    app: ecom-api
  ports:
    - port: 80
      targetPort: 3000
      name: http
